# PatchMind

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
agent-skills/patchmind-memory/: SKILL.md
agent-skills/patchmind-memory/agents/: openai.yaml
scripts/: run_demo.py  seed_demo.py
src/patchmind/: __init__.py  __main__.py  cli.py  config.py  models.py  prompts.py  server.py  service.py
src/patchmind/memory/: __init__.py  base.py  cognee_store.py  in_memory.py  preflight.py
src/patchmind/repository/: __init__.py  filters.py  formatter.py  git_history.py  index_state.py  scanner.py
src/patchmind/tools/: __init__.py  finalize_session.py  get_context.py  index_repository.py  previous_attempts.py  record_outcome.py
tests/: conftest.py  test_cli.py  test_cognee_integration.py  test_cognee_local_integration.py  test_git_history.py  test_mcp_tools.py  test_memory_modes.py  test_preflight.py  test_record_formatter.py  test_repository_scanner.py
