[project]
name = "patchmind"
version = "0.1.0"
description = "Persistent repository memory for coding agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cognee>=1.2.2",
    "mcp>=1.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "structlog>=25.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = ["integration: exercises external services"]

[tool.ruff]
line-length = 100
target-version = "py312"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]
